fix th layout issues

--- a/src/app/components/contacts-list/contacts-list.component.scss
+++ b/src/app/components/contacts-list/contacts-list.component.scss
@@ -8,16 +8,19 @@ td {
   padding: 10px;
 }
 
-th {
+.sortable {
+  cursor: pointer;
   position: relative;
   padding-right: 30px;
 
-  &:before {
+  &:after {
     content: '';
 
     position: absolute;
     top: 15px;
     right: 10px;
+
+    transform-origin: center 3px;
 
     width: 0;
     height: 0;
@@ -28,11 +31,11 @@ th {
     }
   }
 
-  &.is-reversed:before {
+  &.is-reversed:after {
     transform: rotate(180deg);
   }
 
-  &.is-sorted-by:before {
+  &.is-sorted-by:after {
     border: {
       style: solid;
       width: 0 5px 7px 5px;
@@ -40,7 +43,7 @@ th {
     }
   }
 
-  &.is-sorted-by:before {
+  &.is-sorted-by:after {
     border: {
       style: solid;
       width: 0 5px 7px 5px;
@@ -51,8 +54,4 @@ th {
 
 .is-checked td {
   background-color: rgb(224, 224, 224);
-}
-
-.sortable {
-  cursor: pointer;
 }
